--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 csv = "1.3.0"
 clap = { version = "4.5.2", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
