--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,4 @@
+workspace = { members = ["fm-scouter-derive"] }
 [package]
 name = "fm-scouter"
 version = "0.1.0"
@@ -9,3 +10,4 @@ edition = "2021"
 csv = "1.3.0"
 clap = { version = "4.5.2", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
+fm-scouter-derive = { path = "fm-scouter-derive", version = "0.1.0" }
