--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ edition = "2021"
 csv = "1.3.0"
 clap = { version = "4.5.2", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 fm-scouter-derive = { path = "fm-scouter-derive", version = "0.1.0" }
