--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,10 @@ csv = "1.3.0"
 clap = { version = "4.5.2", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+
+[dev-dependencies]
+criterion = { version = "0.4", features = ["html_reports"] }
+
+[[bench]]
+name = "csv_parsing_benchmark"
+harness = false
